TM-16940 Fix = Add class to align the Add buttons
Remove tds-button custom class

--- a/src/main/webapp/tds/web-app/css/elements/component/task-common.scss
+++ b/src/main/webapp/tds/web-app/css/elements/component/task-common.scss
@@ -293,6 +293,13 @@
 
         .k-grid-toolbar {
           padding-bottom: 0;
+          // TODO this section is located over the grid toolbar, so we need to take into account when the
+          // task manager is going to be refactored to use the new grid
+          .table-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+          }
         }
 
         .k-grid-content {
@@ -306,13 +313,6 @@
 
         .api-action-combobox {
           width: 100%;
-        }
-      }
-
-      tds-button {
-        button {
-          color: unset;
-          border-color: unset;
         }
       }
     }
